// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`requests jira when function value is "COUNT" 1`] = `
[
  "/rest/api/3/search/jql",
  {
    "body": "{"jql":"test","maxResults":5000}",
    "headers": {
      "Accept": "application/json",
      "Content-Type": "application/json",
    },
    "method": "POST",
  },
]
`;

exports[`requests jira when function value is "SUM" 1`] = `
[
  "/rest/api/3/search/jql",
  {
    "body": "{"jql":"test"}",
    "headers": {
      "Accept": "application/json",
      "Content-Type": "application/json",
    },
    "method": "POST",
  },
]
`;
